--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=font-name&family=optional-2nd-font-name&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@700&display=swap');
 
 :root {
     --primary-color: #79Beee;
@@ -6,7 +8,7 @@
     --accent1-color: #00569B;
     --accent2-color: #4CAF50;
 
-    --heading-font: 'Bebas Neue', serif;
+    --heading-font: 'Roboto' ,serif;
     --paragraph-font: 'Open Sans', serif;
 
     --nav-background-color: #eee;
