--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
+
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -6,11 +17,16 @@ nav {
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 10px;
 }
 
 h1 {
     color: steelblue;
+    padding: .5rem;
+}
+
+main {
+    height: auto
 }
 
 main img {
@@ -18,23 +34,23 @@ main img {
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 10px #cecece;
+    float: right;
+    margin: 0 0 1rem 7rem;
 }
 
 p {
-    padding: 0;
+    margin: 1rem;
 }
+
 main {
     max-width: 840px;
 }
 
 aside {
-    margin: 1em;
-    border: 1px solid #222;
-    padding: 1em;
-    background-color: #eee;
-    color: #333;
+    width: 20em;
     text-align: center;
+    position: relative;
 }
 
 aside img {
@@ -42,8 +58,27 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    top: 55px;
+    left: 230px;
+}
+
 footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selctors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    background-color: #eee;
+    color: #000
+}
+
+.indent {
+    padding-left: 2rem;
 }
