--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} 
 
 body {
     font-size: 16px;
@@ -12,21 +12,29 @@ body {
 nav {
     background-color: steelblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 10px;
+    text-decoration: none;
+
 }
 
 h1 {
     color: steelblue;
     padding: .5rem;
+    border-bottom: 1px solid steelblue;
 }
 
 main {
-    height: auto
+    height: auto;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 main img {
@@ -36,21 +44,20 @@ main img {
     padding: 2px;
     box-shadow: 0 0 10px #cecece;
     float: right;
-    margin: 0 0 1rem 7rem;
+    margin: 1rem;
+
 }
 
 p {
     margin: 1rem;
 }
 
-main {
-    max-width: 840px;
-}
-
 aside {
     width: 20em;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -60,10 +67,15 @@ aside img {
 
 aside h2 {
     position: absolute;
-    top: 55px;
-    left: 230px;
+    top: 40px;
+    left: 125px;
+    color: #fff;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
 footer {
     margin-top: 1em;
     border-top: 1px solid #000;
@@ -81,4 +93,9 @@ footer {
 
 .indent {
     padding-left: 2rem;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
