--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 } 
 
+a {
+    text-decoration: none;
+}
+
 body {
     font-size: 16px;
     font-family: Roboto, Arial, sans-serif;
@@ -21,8 +25,6 @@ nav a {
     color: white;
     display: block;
     padding: 10px;
-    text-decoration: none;
-
 }
 
 h1 {
