--- a/week05/style/poll-form.css
+++ b/week05/style/poll-form.css
@@ -59,6 +59,10 @@ label {
     padding-right: 1rem;
 }
 
+label[for="feedback"] {
+    padding-right: 9.5rem;
+}
+
 input, select, textarea {
     padding: 0 .5rem;
     font-size: 1rem;
