--- a/week05/style/poll-form.css
+++ b/week05/style/poll-form.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: sans-serif Georgia, 'Times New Roman', Times, serif;
+    font-family: sans-serif, Georgia, 'Times New Roman', Times, serif;
     font-size: 1.2em;
     color: #333;
     background-color: #fff;
