--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -370,10 +370,13 @@ button:hover {
     position: absolute;
     top: 50%;
     left: 50%;
-    color: #fff;
-    text-shadow: 0 0 10px #1b1b1b;
-    font-size: 60px;
     transform: translate( -50%, -50% );
+    color: #fff;
+    background-color: #0078be95;
+    padding: 10px;
+    text-align: center;
+    text-shadow: 0 0 10px #1b1b1b;
+    font-size: 50px;
 }
 
 .trip-description {
