--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -312,15 +312,14 @@ header nav a:hover {
     font-size: 18px;
 }
 
+.contact_info {
+    margin-left: 5rem;
+    padding: 5px 0;
+}
 .contact_info input {
     border: none;
     border-bottom: 1px solid #ccc;
     background-color: #eee;
-}
-
-.contact_info {
-    margin: 0 auto;
-    padding: 5px 0;
 }
 
 .contact_info input, select, textarea {
